refactor: merge subscription tag into subscription