@@ -5,7 +5,7 @@ import myreader.resource.subscriptionentry.beans.SubscriptionEntryGetResponse;
 import org.springframework.hateoas.server.mvc.RepresentationModelAssemblerSupport;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
+import java.util.Set;
 import java.util.TreeSet;
 
 @Component
@@ -24,12 +24,11 @@ public class SubscriptionEntryGetResponseConverter extends RepresentationModelAs
     if (source.getTags() != null) {
       target.setTags(new TreeSet<>(source.getTags()));
     } else {
-      target.setTags(Collections.emptySet());
+      target.setTags(Set.of());
     }
 
     target.setCreatedAt(source.getCreatedAt());
     target.setSeen(source.isSeen());
-
     target.setOrigin(source.getUrl());
     target.setTitle(source.getTitle());
     target.setContent(source.getContent());
@@ -37,12 +36,8 @@ public class SubscriptionEntryGetResponseConverter extends RepresentationModelAs
     var subscription = source.getSubscription();
     target.setFeedTitle(subscription.getTitle());
     target.setFeedUuid(subscription.getId().toString());
-
-    if (subscription.getSubscriptionTag() != null) {
-      var subscriptionTag = subscription.getSubscriptionTag();
-      target.setFeedTag(subscriptionTag.getName());
-      target.setFeedTagColor(subscriptionTag.getColor());
-    }
+    target.setFeedTag(subscription.getTag());
+    target.setFeedTagColor(subscription.getColor());
 
     return target;
   }
